--- a/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.css
+++ b/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.css
@@ -75,4 +75,28 @@
 }
 .form__list-items md-outlined-text-field {
   width: 500px;
+}
+.form__list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 500px;
+}
+.form__list-item md-outlined-text-field {
+  width: 240px;
+}
+
+.date-picker {
+  /* text field */
+  box-sizing: border-box;
+  height: 56px;
+  /* M3/sys/light/outline */
+  border: 1px solid #79747E;
+  border-radius: 4px;
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 1;
+  z-index: 0;
 }/*# sourceMappingURL=ReceptionPage.css.map */
