--- a/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.scss
+++ b/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.scss
@@ -74,7 +74,7 @@
         background-color: rgba(247, 242, 250, 1);
         border-radius: 50px;
 
-        &-header{
+        &-header {
             margin: 0px;
             width: auto;
             font-family: "Roboto", sans-serif;
@@ -88,13 +88,41 @@
             gap: 40px;
             justify-content: center;
 
-
             md-outlined-text-field {
                 width: 500px;
             }
         }
 
+        &-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 500px;
 
+            md-outlined-text-field {
+                width: 240px;
+            }
 
+        }
     }
+}
+.date-picker{
+ /* text field */
+
+box-sizing: border-box;
+
+height: 56px;
+
+/* M3/sys/light/outline */
+border: 1px solid #79747E;
+border-radius: 4px;
+
+/* Inside auto layout */
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 1;
+z-index: 0;
+
+
 }
