--- a/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.css
+++ b/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.css
@@ -67,6 +67,7 @@
   font-weight: 400;
   font-size: 32px;
   line-height: 40px;
+  margin-bottom: 80px;
 }
 .form__list-items {
   display: grid;
@@ -83,20 +84,5 @@
   width: 500px;
 }
 .form__list-item md-outlined-text-field {
-  width: 240px;
-}
-
-.date-picker {
-  /* text field */
-  box-sizing: border-box;
-  height: 56px;
-  /* M3/sys/light/outline */
-  border: 1px solid #79747E;
-  border-radius: 4px;
-  /* Inside auto layout */
-  flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 1;
-  z-index: 0;
+  width: 250px;
 }/*# sourceMappingURL=ReceptionPage.css.map */
