--- a/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.scss
+++ b/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.scss
@@ -81,6 +81,7 @@
             font-weight: 400;
             font-size: 32px;
             line-height: 40px;
+            margin-bottom: 80px;
         }
 
         &-items {
@@ -100,29 +101,9 @@
             width: 500px;
 
             md-outlined-text-field {
-                width: 240px;
+                width: 250px;
             }
 
         }
     }
-}
-.date-picker{
- /* text field */
-
-box-sizing: border-box;
-
-height: 56px;
-
-/* M3/sys/light/outline */
-border: 1px solid #79747E;
-border-radius: 4px;
-
-/* Inside auto layout */
-flex: none;
-order: 0;
-align-self: stretch;
-flex-grow: 1;
-z-index: 0;
-
-
 }
