rreceptionpage fisrtlist and secondlist
formlarda kullanıcının kayıt olacağı 2 ekran da çalışır durumda

--- a/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.css
+++ b/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.css
@@ -85,4 +85,10 @@
 }
 .form__list-item md-outlined-text-field {
   width: 250px;
+}
+.form__list-footer {
+  margin-top: 40px;
+}
+.form__list-footer md-filled-button {
+  width: 500px;
 }/*# sourceMappingURL=ReceptionPage.css.map */
