--- a/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.css
+++ b/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.css
@@ -56,9 +56,12 @@
   letter-spacing: 0.5px;
 }
 .form__list {
-  padding: 60px;
+  padding: 60px 80px;
   background-color: rgb(247, 242, 250);
   border-radius: 50px;
+}
+.form__list p {
+  margin: 0px;
 }
 .form__list-header {
   margin: 0px;
@@ -67,6 +70,7 @@
   font-weight: 400;
   font-size: 32px;
   line-height: 40px;
+  margin-bottom: 80px;
 }
 .form__list-items {
   display: grid;
@@ -75,4 +79,27 @@
 }
 .form__list-items md-outlined-text-field {
   width: 500px;
+}
+.form__list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 500px;
+}
+.form__list-item md-outlined-text-field {
+  width: 250px;
+}
+.form__list-footer {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: block;
+  margin-top: 40px;
+  width: 500px;
+}
+.form__list-footer md-filled-button {
+  width: 500px;
+}
+.form__list-footer p {
+  width: auto;
 }/*# sourceMappingURL=ReceptionPage.css.map */
