--- a/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.scss
+++ b/day-story-web/src/Pages/ReceptionPage/scss/ReceptionPage.scss
@@ -70,17 +70,22 @@
     }
 
     &__list {
-        padding: 60px;
+        padding: 60px 80px;
         background-color: rgba(247, 242, 250, 1);
         border-radius: 50px;
 
-        &-header{
+        p{
+            margin: 0px;
+        }
+
+        &-header {
             margin: 0px;
             width: auto;
             font-family: "Roboto", sans-serif;
             font-weight: 400;
             font-size: 32px;
             line-height: 40px;
+            margin-bottom: 80px;
         }
 
         &-items {
@@ -88,13 +93,39 @@
             gap: 40px;
             justify-content: center;
 
-
             md-outlined-text-field {
                 width: 500px;
             }
         }
 
+        &-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 500px;
 
+            md-outlined-text-field {
+                width: 250px;
+            }
+        }
+        &-footer{
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            display: block;
+            margin-top: 40px;
+            width: 500px;
+
+            md-filled-button{
+                width: 500px;
+            }
+
+            p{
+                width: auto;
+            }
+        }
 
     }
+
+    
 }
