ui koding and some components
kayıt ol sayfasının ui tasarımı gömdük ve çeşitli componentler ekledim

--- a/day-story-web/src/Pages/LoginPage/scss/loginPage.css
+++ b/day-story-web/src/Pages/LoginPage/scss/loginPage.css
@@ -8,9 +8,8 @@
   align-items: center;
 }
 .header__logo {
-  background-color: white;
-  width: 70px;
-  height: 70px;
+  width: 58px;
+  height: px;
 }
 .header__text {
   font-family: "Roboto", sans-serif;
