--- a/day-story-web/src/Pages/LoginPage/scss/loginPage.scss
+++ b/day-story-web/src/Pages/LoginPage/scss/loginPage.scss
@@ -11,9 +11,8 @@
     align-items: center;
 
     &__logo {
-        background-color: white;
-        width: 70px;
-        height: 70px;
+        width: 58px;
+        height: px;
     }
 
     &__text {
