--- a/day-story-web/src/Pages/LoginPage/scss/loginPage.scss
+++ b/day-story-web/src/Pages/LoginPage/scss/loginPage.scss
@@ -12,7 +12,7 @@
 
     &__logo {
         width: 58px;
-        height: px;
+        height: 58px;
     }
 
     &__text {
@@ -29,15 +29,15 @@
             font-weight: 300;
             line-height: 40px;
             text-align: left;
-
         }
     }
 }
 
-
 .form {
     display: flex;
-    justify-content: space-around;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
 
 
     &__description {
@@ -49,14 +49,15 @@
 
 
         &-img {
-            height: 482px;
+            height: 400px;
         }
 
         &-text {
             width: 579px;
 
             h2 {
-                color: rgba(0, 0, 0, 1);
+                color: rgba(90, 108, 165, 1);
+                margin: 0px;
                 font-size: 22px;
                 font-family: "Roboto", sans-serif;
                 font-weight: 400;
@@ -64,7 +65,9 @@
             }
 
             p {
+                margin: 8px;
                 font-family: "Roboto", sans-serif;
+                color: rgba(136, 136, 136, 1);
                 font-size: 16px;
                 font-weight: 400;
                 line-height: 24px;
@@ -76,8 +79,9 @@
 
     &__list {
         padding: 60px 80px;
-        background-color: rgba(247, 242, 250, 1);
+        background-color: rgba(250, 250, 250, 1);
         border-radius: 50px;
+
 
         p {
             margin: 0px;
@@ -90,18 +94,15 @@
             font-weight: 400;
             font-size: 32px;
             line-height: 40px;
-            margin-bottom: 80px;
+            margin-bottom: 70px;
         }
 
         &-items {
             display: grid;
-            gap: 40px;
-            justify-content: center;
-
-            md-outlined-text-field {
-                width: 500px;
-            }
+            gap: 35px;
+            justify-content: space-between;
         }
+
 
         &-item {
             display: flex;
@@ -112,27 +113,77 @@
             md-outlined-text-field {
                 width: 250px;
             }
+            
+            md-select-option{
+                background-color: white;
+            }
+
+
         }
 
-        &-footer {
+        //formlistfirst buttonu
+        &-button {
+            margin: 0px;
             justify-content: center;
             align-items: center;
             text-align: center;
-            display: block;
-            margin-top: 80px;
-            width: 500px;
-            display: grid;
-            gap: 10px;
+
 
             md-filled-button {
+                fill: black;
                 width: 500px;
-            }
-
-            p {
-                margin-top: 40px;
-                width: auto;
+                --md-sys-color-primary: rgba(255, 255, 255, 0);
+                background: linear-gradient(271.96deg, #6A7FC1 48.21%, #F3AFE5 100%);
             }
         }
+
+        //formlistsecond buttonları
+        &-buttons {
+            margin: 0px;
+            justify-content: space-between;
+            align-items: center;
+            text-align: center;
+            display: flex;
+            width: 500px;
+            gap: 10px;
+
+            md-outlined-button {
+                width: 240px;
+            }
+
+            md-filled-button {
+                width: 240px;
+                --md-sys-color-primary: rgba(255, 255, 255, 0);
+                background: linear-gradient(271.96deg, #6A7FC1 48.21%, #F3AFE5 100%);
+
+            }
+        }
+
+
+        &-footer {
+            margin: 16px 0px;
+
+            p {
+                font-family: "Roboto", sans-serif;
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 24px;
+                letter-spacing: 0.15px;
+                color: rgba(90, 108, 165, 1);
+            }
+
+            span {
+                font-family: "Roboto", sans-serif;
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 24px;
+                letter-spacing: 0.15px;
+                color: rgba(90, 108, 165, 1);
+
+
+            }
+        }
+
 
     }
 
