--- a/day-story-web/src/Pages/RegisterPage/scss/RegisterPage.scss
+++ b/day-story-web/src/Pages/RegisterPage/scss/RegisterPage.scss
@@ -163,6 +163,7 @@
 
         &-footer {
             margin: 16px 0px;
+            text-align: center;
 
             p {
                 font-family: "Roboto", sans-serif;
