--- a/day-story-web/src/Pages/RegisterPage/scss/RegisterPage.css
+++ b/day-story-web/src/Pages/RegisterPage/scss/RegisterPage.css
@@ -128,6 +128,7 @@
 }
 .form__list-footer {
   margin: 16px 0px;
+  text-align: center;
 }
 .form__list-footer p {
   font-family: "Roboto", sans-serif;
