--- a/day-story-web/src/Pages/RegisterPage/scss/RegisterPage.scss
+++ b/day-story-web/src/Pages/RegisterPage/scss/RegisterPage.scss
@@ -37,7 +37,7 @@
 .form {
     display: flex;
     gap: 20px;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 
 
@@ -50,7 +50,7 @@
 
 
         &-img {
-            height: 400px;
+            height: 580px;
         }
 
         &-text {
@@ -59,10 +59,19 @@
             h2 {
                 color: rgba(90, 108, 165, 1);
                 margin: 0px;
-                font-size: 22px;
+                font-size: 36px;
                 font-family: "Roboto", sans-serif;
-                font-weight: 400;
-                line-height: 28px;
+                font-weight: 700;
+                line-height: 40px;
+                width: auto;
+            }
+
+            span {
+                font-family: "Roboto", sans-serif;
+                font-size: 36px;
+                font-weight: 300;
+                line-height: 40px;
+
             }
 
             p {
@@ -83,7 +92,6 @@
         background-color: rgba(250, 250, 250, 1);
         border-radius: 50px;
 
-
         p {
             margin: 0px;
         }
@@ -100,47 +108,39 @@
 
         &-items {
             display: grid;
-            gap: 35px;
+            gap: 10px;
             justify-content: space-between;
         }
-
 
         &-item {
             display: flex;
             justify-content: space-between;
             align-items: center;
             width: 500px;
-
-            md-outlined-text-field {
-                width: 250px;
-            }
-
-            md-select-option{
-                background-color: white;
-            }
-
-
+            gap: 20px;
         }
 
         //formlistfirst buttonu
         &-button {
-            margin: 0px;
+            margin: 20px 0px 0px 0px;
             justify-content: center;
             align-items: center;
             text-align: center;
 
-
-            md-filled-button {
-                fill: black;
+            Button {
+                border-radius: 20px;
                 width: 500px;
-                --md-sys-color-primary: rgba(255, 255, 255, 0);
+                padding: 8px;
+                text-transform: none;
+                font-family: "Roboto", sans-serif;
                 background: linear-gradient(271.96deg, #6A7FC1 48.21%, #F3AFE5 100%);
+
             }
         }
 
         //formlistsecond buttonları
         &-buttons {
-            margin: 0px;
+            margin: 20px 0px 0px 0px;
             justify-content: space-between;
             align-items: center;
             text-align: center;
@@ -148,15 +148,24 @@
             width: 500px;
             gap: 10px;
 
-            md-outlined-button {
+
+            Button {
+                border-radius: 20px;
+                text-transform: none;
                 width: 240px;
+                font-family: "Roboto", sans-serif;
+                text-transform: none;
+                padding: 8px;
+
             }
 
-            md-filled-button {
-                width: 240px;
-                --md-sys-color-primary: rgba(255, 255, 255, 0);
-                background: linear-gradient(271.96deg, #6A7FC1 48.21%, #F3AFE5 100%);
+            &-back {
+                background: transparent;
+                color: black;
+            }
 
+            &-submit {
+                background: linear-gradient(271.96deg, #6A7FC1 48.21%, #F3AFE5 100%);
             }
         }
 
@@ -181,6 +190,8 @@
                 line-height: 24px;
                 letter-spacing: 0.15px;
                 color: rgba(90, 108, 165, 1);
+                text-decoration: underline;
+                cursor: pointer;
 
 
             }
