--- a/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.scss
+++ b/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.scss
@@ -1,4 +1,6 @@
 .gallery-container {
+    width: max-content;
+    height: max-content;
     margin-top: 108px;
     padding: 13px 80px;
 
@@ -63,6 +65,7 @@
 
 
     .month__container {
+        text-align: left;
         align-items: center;
         justify-content: center;
 
