--- a/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.css
+++ b/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.css
@@ -3,7 +3,7 @@
   width: max-content;
   height: -moz-max-content;
   height: max-content;
-  margin-top: 108px;
+  margin: 108px 0px;
   padding: 13px 80px;
 }
 .gallery-container .days {
