--- a/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.scss
+++ b/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.scss
@@ -1,7 +1,7 @@
 .gallery-container {
     width: max-content;
     height: max-content;
-    margin-top: 108px;
+    margin: 108px 0px ; 
     padding: 13px 80px;
 
 
