--- a/day-story-web/src/Pages/RegisterPage/register-scss/RegisterPage.scss
+++ b/day-story-web/src/Pages/RegisterPage/register-scss/RegisterPage.scss
@@ -38,13 +38,13 @@
 
 .form {
     display: flex;
-    gap: 20px;
-    justify-content: space-between;
+    gap: 30px;
+    justify-content: space-around;
     align-items: center;
 
 
     &__description {
-        width: 579px;
+        width: 450px;
         justify-content: center;
         align-items: center;
         text-align: center;
@@ -52,11 +52,10 @@
 
 
         &-img {
-            height: 580px;
+            height: 500px;
         }
 
         &-text {
-            width: 579px;
 
             h2 {
                 color: rgba(90, 108, 165, 1);
