--- a/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.css
+++ b/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.css
@@ -13,18 +13,17 @@
   justify-content: space-between;
 }
 .gallery-container .calendar {
-  width: 160px;
   display: grid;
-  gap: 7px;
-  justify-content: center;
+  gap: 10px;
+  justify-content: space-around;
   align-items: center;
   background-color: rgb(250, 250, 250);
   border-radius: 5px;
   border: 1px solid rgb(219, 219, 219);
-  padding: 5px;
+  padding: 10px;
 }
 .gallery-container .calendar.today {
-  background-color: green;
+  background-color: rgb(90, 108, 165);
   color: #fff;
 }
 .gallery-container .calendar__header {
@@ -46,8 +45,8 @@
   font-size: 12px;
 }
 .gallery-container .calendar__image {
-  width: 152px;
-  height: 152px;
+  width: 150px;
+  height: 180px;
   background-color: rgb(241, 240, 240);
 }
 .gallery-container .month__container {
