--- a/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.scss
+++ b/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.scss
@@ -14,18 +14,18 @@
     }
 
     .calendar {
-        width: 160px;
+       
         display: grid;
-        gap: 7px;
-        justify-content: center;
+        gap: 10px;
+        justify-content: space-around;
         align-items: center;
         background-color: rgba(250, 250, 250, 1);
         border-radius: 5px;
         border: 1px solid rgba(219, 219, 219, 1);
-        padding: 5px;
+        padding: 10px;
 
         &.today {
-            background-color: green;
+            background-color: rgba(90, 108, 165, 1);
             color: #fff;
         }
 
@@ -53,9 +53,8 @@
         }
 
         &__image {
-
-            width: 152px;
-            height: 152px;
+            width: 150px;
+            height: 180px;
             background-color: rgba(241, 240, 240, 1);
 
         }
