--- a/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.css
+++ b/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.css
@@ -3,16 +3,17 @@
   width: max-content;
   height: -moz-max-content;
   height: max-content;
-  margin: 108px 0px;
+  margin: 120px 0px;
   padding: 13px 80px;
 }
 .gallery-container .days {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   gap: 12px;
   justify-content: space-between;
 }
 .gallery-container .calendar {
+  text-align: left;
   display: grid;
   gap: 10px;
   justify-content: space-around;
@@ -46,7 +47,7 @@
 }
 .gallery-container .calendar__image {
   width: 150px;
-  height: 180px;
+  height: 150px;
   background-color: rgb(241, 240, 240);
 }
 .gallery-container .month__container {
