--- a/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.css
+++ b/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.css
@@ -61,5 +61,5 @@
   font-weight: 300;
   line-height: 16px;
   color: rgb(73, 69, 79);
-  padding: 20px;
+  padding: 20px 10px;
 }/*# sourceMappingURL=gallery.css.map */
