--- a/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.scss
+++ b/day-story-web/src/Pages/GalleryPage/gallery-scss/gallery.scss
@@ -62,8 +62,6 @@
 
     }
 
-
-
     .month__container {
         text-align: left;
         align-items: center;
@@ -76,7 +74,7 @@
             font-weight: 300;
             line-height: 16px;
             color: rgba(73, 69, 79, 1);
-            padding: 20px;
+            padding: 20px 10px;
 
 
         }
