--- a/day-story-web/src/Pages/RegisterPage/register-scss/RegisterPage.scss
+++ b/day-story-web/src/Pages/RegisterPage/register-scss/RegisterPage.scss
@@ -119,6 +119,11 @@
             align-items: center;
             width: 500px;
             gap: 20px;
+
+            .cinsiyet{
+                width: 240px;
+            }
+
         }
 
         //formlistfirst buttonu
