--- a/src/Pages/Footer/footer-scss/_footer.scss
+++ b/src/Pages/Footer/footer-scss/_footer.scss
@@ -1,39 +1,45 @@
 .footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: white;
-  padding: 10px 5px 10px 180px;
-  filter: drop-shadow(0px 0.5px 0.5px rgba(0, 0, 0, 0.25));
-  justify-content: space-between;
-  display: flex;
+    background-color: white;
+    padding: 20px 180px;
+    filter: drop-shadow(0px 0.5px 0.5px rgba(0, 0, 0, 0.25));
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
 
-  &__logo {
-      align-items: center;
-      display: flex;
+    &__logo {
+        align-items: center;
+        display: flex;
 
-      &-img {
-          width: 58px;
-      }
+        &-img {
+            width: 58px;
+        }
 
-      &-text {
-          font-family: "Roboto", sans-serif;
-          color: rgba(90, 108, 165, 1);
-          font-weight: 400;
-          font-size: 32px;
-          line-height: 40px;
-          margin: 0px;
+        &-text {
+            font-family: "Roboto", sans-serif;
+            color: rgba(90, 108, 165, 1);
+            font-weight: 400;
+            font-size: 32px;
+            line-height: 40px;
+            margin: 0px;
 
-          span {
-              font-family: "Roboto", sans-serif;
-              font-size: 32px;
-              font-weight: 300;
-              line-height: 40px;
-              text-align: left;
-          }
-      }
-  }
+            span {
+                font-family: "Roboto", sans-serif;
+                font-size: 32px;
+                font-weight: 300;
+                line-height: 40px;
+                text-align: left;
+            }
+        }
+    }
+
+    &__mobil{
+        
+        &-images{
+            display: flex;
+            gap: 10px;
+        }
+    }
+
 
 
 
