--- a/src/Pages/ReceptionPage/scss/Reception.css
+++ b/src/Pages/ReceptionPage/scss/Reception.css
@@ -1,164 +1,94 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-.container {
-  width: -moz-max-content;
-  width: max-content;
-  height: -moz-max-content;
-  height: max-content;
-  padding: 43px 78px;
-}
-
-.header {
-  display: flex;
+.landingpage {
+  display: block;
+  gap: 20px;
   align-items: center;
-}
-.header__logo {
-  width: 58px;
-  height: 58px;
-}
-.header__text {
-  font-family: "Roboto", sans-serif;
-  color: rgb(90, 108, 165);
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 40px;
-  margin: 0px;
-}
-.header__text span {
-  font-family: "Roboto", sans-serif;
-  font-size: 32px;
-  font-weight: 300;
-  line-height: 40px;
-  text-align: left;
-}
-
-.form {
-  display: flex;
-  gap: 30px;
-  justify-content: space-around;
-  align-items: center;
-}
-.form__description {
-  width: 450px;
   justify-content: center;
+  text-align: center;
+  padding: 110px 90px;
+}
+.landingpage__info {
+  display: flex;
+  gap: 70px;
   align-items: center;
   text-align: center;
-  padding: 60px;
 }
-.form__description-img {
-  height: 500px;
+.landingpage__info-img {
+  width: 600px;
 }
-.form__description-text h2 {
+.landingpage__info-text {
+  display: block;
+  gap: 22px;
+  width: 500px;
+}
+.landingpage__info-text h2 {
   color: rgb(90, 108, 165);
   margin: 0px;
   font-size: 36px;
   font-family: "Roboto", sans-serif;
-  font-weight: 700;
+  font-weight: 400;
   line-height: 40px;
   width: auto;
 }
-.form__description-text span {
+.landingpage__info-text span {
   font-family: "Roboto", sans-serif;
   font-size: 36px;
   font-weight: 300;
   line-height: 40px;
 }
-.form__description-text p {
-  margin: 8px;
+.landingpage__info-text h3 {
   font-family: "Roboto", sans-serif;
-  color: rgb(136, 136, 136);
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+}
+.landingpage__info-text p {
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.5px;
 }
-.form__list {
-  padding: 60px 80px;
-  background-color: rgb(250, 250, 250);
-  border-radius: 50px;
+.landingpage .middle {
+  margin-top: 100px;
 }
-.form__list p {
-  margin: 0px;
-}
-.form__list-header {
-  margin: 0px;
-  width: auto;
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 40px;
-  margin-bottom: 70px;
-}
-.form__list-items {
-  display: grid;
-  gap: 30px;
-  justify-content: space-between;
-}
-.form__list-item {
+.landingpage__card {
+  padding: 200px 0px 20px 0px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  width: 500px;
+  text-align: center;
 }
-.form__list-item .cinsiyet {
-  width: 240px;
-}
-.form__list-button {
-  margin: 20px 0px 0px 0px;
+.landingpage__card-area {
+  display: block;
   justify-content: center;
   align-items: center;
-  text-align: center;
-}
-.form__list-button Button {
-  border-radius: 20px;
-  width: 500px;
-  padding: 8px;
-  text-transform: none;
-  font-family: "Roboto", sans-serif;
-  background: linear-gradient(271.96deg, #6A7FC1 48.21%, #F3AFE5 100%);
-}
-.form__list-buttons {
-  margin: 20px 0px 0px 0px;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-  display: flex;
-  width: 500px;
-  gap: 10px;
-}
-.form__list-buttons Button {
-  border-radius: 20px;
-  text-transform: none;
+  position: relative;
   width: 240px;
+  height: 170px;
+  background: #FAFAFA;
+  border: 1px solid #D9D9D9;
+  border-radius: 20px;
+  padding: 10px;
+}
+.landingpage__card-img {
+  width: 432px;
+  position: absolute;
+  top: -20px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.landingpage__card-info {
+  margin-top: 100px;
+}
+.landingpage__last {
+  margin: 100px;
+}
+.landingpage__last p {
+  width: 405px;
   font-family: "Roboto", sans-serif;
-  text-transform: none;
-  padding: 8px;
-}
-.form__list-buttons-back {
-  background: transparent;
-  color: black;
-}
-.form__list-buttons-submit {
-  background: linear-gradient(271.96deg, #6A7FC1 48.21%, #F3AFE5 100%);
-}
-.form__list-footer {
-  margin: 16px 0px;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 28px;
   text-align: center;
-}
-.form__list-footer p {
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0.15px;
-  color: rgb(90, 108, 165);
-}
-.form__list-footer span {
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0.15px;
-  color: rgb(90, 108, 165);
-  text-decoration: underline;
-  cursor: pointer;
 }/*# sourceMappingURL=Reception.css.map */
