--- a/src/Pages/ReceptionPage/scss/_reception.scss
+++ b/src/Pages/ReceptionPage/scss/_reception.scss
@@ -100,6 +100,7 @@
 
     &__last {
         margin: 100px;
+        margin-bottom: 40px;
 
         p {
             width: 405px;
@@ -110,8 +111,6 @@
             text-align: center;
         }
     }
-
-
 
 
     &__buttons {
