--- a/src/Pages/GalleryPage/gallery-scss/_gallery.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery.scss
@@ -2,9 +2,7 @@
 .gallery-container {
     width: max-content;
     height: max-content;
-    margin: 138px 0px ; 
-    padding: 0px 80px;
-
+    margin: 138px 0px 100px 0px; 
 
     .days {
         display: grid;
