--- a/src/Pages/ReceptionPage/scss/_reception.scss
+++ b/src/Pages/ReceptionPage/scss/_reception.scss
@@ -72,28 +72,33 @@
         text-align: center;
 
         &-area {
-            display: block;
+            padding: 25px;
             justify-content: center;
             align-items: center;
+            text-align: center;
             position: relative;
-            width: 240px;
-            height: 170px;
+            width: 200px;
+            height: 130px;
             background: #FAFAFA;
             border: 1px solid #D9D9D9;
             border-radius: 20px;
-            padding: 10px;
+            z-index: -2;
         }
 
         &-img {
             width: 432px;
             position: absolute;
-            top: -20px;
-            left: 50%;
+            top: -12px;
+            left: 125px;
             transform: translate(-50%, -50%);
+            z-index: -1;
         }
 
         &-info {
-            margin-top: 100px;
+            position: absolute;
+            bottom: 0px;
+            width: 200px;
+    
         }
 
     }
