--- a/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
@@ -1,8 +1,123 @@
-.gallerydetail{
+.detail {
     width: max-content;
     height: max-content;
-    margin: 138px 0px ; 
-    padding: 0px 80px;
-    background-color: red;
-}
+    margin: 138px 0px 100px 0px;
+    display: block;
+    gap: 20px;
 
+    &__header {
+        font-family: Roboto;
+        font-size: 32px;
+        font-weight: 400;
+        line-height: 40px;
+        text-align: end;
+        color: rgba(90, 108, 165, 1);
+    }
+
+    &__content {
+        display: flex;
+        gap: 50px;
+        max-height: auto;
+    }
+
+    &__generate {
+        width: 480px;
+        height: auto;
+        border-radius: 16px;
+        background-color: white;
+        padding: 15px;
+    }
+
+    &__date {
+        font-family: "Roboto", sans-serif;
+        display: flex;
+        align-items: center;
+
+        p {
+            margin: 24px 5px;
+        }
+
+        &-info {
+            display: block;
+        }
+
+        &-dayno {
+            font-size: 100px;
+            font-weight: 400;
+            line-height: 16px;
+            text-align: left;
+        }
+
+        &-dayname {
+            font-family: Roboto;
+            font-size: 45px;
+            font-weight: 400;
+            line-height: 16px;
+            text-align: left;
+
+        }
+
+        &-month {
+            font-family: Roboto;
+            font-size: 45px;
+            font-weight: 500;
+            line-height: 16px;
+            text-align: left;
+
+        }
+
+        &-img {
+            width: 448px;
+            height: 448px;
+        }
+    }
+
+    &__img {
+        background-color: grey;
+        width: 480px;
+        height: 480px;
+
+    }
+
+
+    &__notes {
+        width: max-content;
+        height: max-content;
+        display: grid;
+        gap: 20px;
+        border-radius: 16px;
+        background: green;
+        justify-content:space-between;
+        text-align: left;
+        padding: 10px;
+
+
+        &-area {
+            display: block;
+            padding: 8px;
+            gap: 8px;
+            width: 659px;
+            height: 135px;
+            background: #FAFAFA;
+            box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
+            border-radius: 12px;
+
+
+            p {
+                margin: 10px;
+            }
+        }
+
+        &-title {
+    
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 20px;
+            letter-spacing: 0.10000000149011612px;
+
+        }
+    }
+
+
+
+}
