--- a/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
@@ -6,11 +6,12 @@
     gap: 20px;
 
     &__header {
-        font-family: Roboto;
+        font-family: "Roboto", sans-serif;
         font-size: 32px;
         font-weight: 400;
         line-height: 40px;
         text-align: end;
+        margin: 10px;
         color: rgba(90, 108, 165, 1);
     }
 
@@ -86,11 +87,10 @@
         display: grid;
         gap: 20px;
         border-radius: 16px;
-        background: green;
         justify-content:space-between;
         text-align: left;
         padding: 10px;
-
+        border: 1px solid rgba(193, 189, 189, 0.5);
 
         &-area {
             display: block;
